fix dialog overflow issue

--- a/src/assets/stylus/dialog.styl
+++ b/src/assets/stylus/dialog.styl
@@ -87,7 +87,6 @@
           width: 100%
           position: relative
           word-break: break-word
-          overflow: auto
           &.has-footer
             padding-bottom: 64px
         ct-dialog-btn()
